--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,15 @@
     
    
 }
+@media (max-width: 770px) {
+    .slide h2 {
+       font-size: 16px ;
+    }
+    .slide p {
+       font-size: 11px ;
+    }
+   
+}
 @media (max-width: 999px) {
     .offcanvas-body .d-none{
         display: block !important;
@@ -113,4 +122,64 @@
         display: flex;
         justify-content: space-between !important;
   }
+}
+
+/* slider */
+.slider {
+    position: relative;
+    width: 100%;
+    border: 2px solid #ddd;
+}
+
+.slides {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.slide {
+    min-width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 20px;
+}
+.slide img {
+    width: 100%;
+    height: auto;
+}
+
+.navigation {
+    position: absolute;
+    top: 50%;
+    right: 4%;
+    width: 92%;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+}
+
+.navigation button {
+    background: none;
+    border: none;
+    color: black;
+    cursor: pointer;
+}
+
+.dots {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.dot {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin: 0 5px;
+    background-color: #bbb;
+    border-radius: 50%;
+    cursor: pointer;
+
+}
+
+.dot.active-dot {
+    background-color: #daad19;
 }
